Removes usage of 1.5 API.